fixed a styling error on mobile

--- a/src/components/PricingPageTemplate/_pricing-page.scss
+++ b/src/components/PricingPageTemplate/_pricing-page.scss
@@ -1,7 +1,7 @@
 .pricing-page {
   &__a-la-carte-item {
-    margin-right: 8%;
-    margin-left: 8%;
+    margin-right: 4%;
+    margin-left: 4%;
   }
 
   &__small-item {
